2013-01-13  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
	* doc/fileevent.n: Clarify readable fileevent "false positives" in
	the case of multibyte encodings/transforms [Bug 3436609].

2013-01-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclIntDecls.h: If TCL_NO_DEPRECATED is defined, make
	sure that TIP #139 functions all are taken from the public stub
	table, even if the inclusion is through tclInt.h.

2013-01-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls: Put back TclBackgroundException in
	internal stub table, so extensions using this, compiled
	against 8.5 headers still run in Tcl 8.6.

2013-01-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/http/http.tcl: [Bug 3599395]: http assumes status line
	is a proper tcl list.

2013-01-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c: [Bug 3092089]: [file normalize] can remove path
	components.	[Bug 3587096] win vista/7: "can't find init.tcl" when
	called via junction without folder list access.

2013-01-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclOOStubLib.c: Restrict the stub library to only use
	* generic/tclTomMathStubLib.c: Tcl_PkgRequireEx, Tcl_ResetResult
	and Tcl_AppendResult, not any other function. This puts least
	restrictions on eventual Tcl 9 stubs re-organization, and it
	works on the widest range of Tcl versions.

2013-01-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/http/http.tcl: Don't depend on Spencer-specific regexp
	* tests/env.test: syntax (/u and /U) any more in unrelated places.
	* tests/exec.test:
	Bump http package to 2.8.6.

2013-01-04  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclEnsemble.c (CompileBasicNArgCommand): Added very simple
	compiler (which just compiles to a normal invoke of the implementation
	command) for many ensemble subcommands where we can prove that there
	is no way for scripts to detect the difference even through error